fix alignment

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ body {
     font-size: 18px;
     padding-left: 15px;
     display: flex;
-    height: 70px;
+    height: 60px;
     width: 200px;
 }
 .menu-back{
@@ -124,8 +124,6 @@ body {
     margin-left: 15px;
     
 }
-
-
 
 .triangle{
     display: none;
@@ -151,7 +149,7 @@ body {
     text-decoration: none;
     display: flex;
     flex-direction: row;
-    margin: 25px 15px;
+    margin: 20px 10px;
 }
 
 .back-page:hover{
